burger menu was implemented and some small inprovments were done

--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,40 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Oswald:wght@300;400&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="wrapper">
-        <div class="header__top">
-          <img
-            src="images\burger.svg"
-            alt="="
-            class="header__burger-img"
-          >
-          <div class="header__logo-text">NA<br>MU</div>
+        <div class="header__burger">
+          <span ></span>
         </div>
+      </div>
+      <nav class="header__menu">
+
+        <ul class="header__menu-list">
+          <li class="header__menu-list-item"><a href="#gal" class="header__menu-list-item-link">Галерея</a></li>
+          <li class="header__menu-list-item"><a href="#events" class="header__menu-list-item-link">Виставки та події</a></li>
+          <li class="header__menu-list-item"><a href="#sub" class="header__menu-list-item-link">Відвідування</a></li>
+          <li class="header__menu-list-item"><a href="#sub" class="header__menu-list-item-link">Стати нашим другом</a></li>
+          <li class="header__menu-list-item"><a href="#sub" class="header__menu-list-item-link">Про Нас</a></li>
+          <li class="header__menu-list-item"><a href="#sub" class="header__menu-list-item-link">Магазин</a></li>
+          <li class="header__menu-list-item"><a href="#sub" class="header__menu-list-item-link">Блог</a></li>
+          <li class="header__menu-list-item"><a href="#sub" class="header__menu-list-item-link">Контакти</a></li>
+        </ul>
+        <a href="" class="header__menu-search">
+          <img
+            src="images\search.svg"
+            alt="search"
+            class="header__menu-search-img"
+          >
+        </a>
+      </nav>
+      <div class="wrapper">
+        <div class="header__logo-text"><a href="#header">NA<br>MU</a></div>
+      </div>
+      <div class="wrapper">
         <h1 class="header__title">
-          ХУДОЖНІЙ<br>МУЗЕЙ
+              ХУДОЖНІЙ<br>МУЗЕЙ
         </h1>
-        <a href="#" class="header__link link-button">
+        <a href="#sub" class="header__link">
           <img
             src="images\link-arrow.svg"
             alt=">"
@@ -29,9 +49,13 @@
           >
         </a>
       </div>
+      <div class="wrapper">
+        <span class="header__side-text">події</span>
+      </div>
+
     </header>
     <main class="main">
-      <section class="current-events">
+      <section class="current-events" id="events">
         <div class="wrapper">
           <h2 class="current-events__title">
             Актуальні події
@@ -93,7 +117,7 @@
       </section>
       <section class="gallery">
         <div class="wrapper">
-          <h2 class="gallery__title">Галерея</h2>
+          <h2 class="gallery__title" id="gal">Галерея</h2>
           <div class="gallery__picture-set">
             <div class="gallery__picture-set-top">
               <img
@@ -160,7 +184,7 @@
           </div>
         </div>
       </section>
-      <section class="subscription">
+      <section class="subscription" id="sub">
         <div class="wrapper subscription__wrapper">
           <h2 class="subscription__title">
             Підписка
@@ -192,10 +216,22 @@
       <div class="wrapper footer__wrapper">
         <div class="footer__side-a">
           <div class="footer__side-a-logo-soc">
-            <div class="footer__side-a-logo-soc-logo">NA<br>MU</div>
+            <div class="footer__side-a-logo-soc-logo"><a href="#header">NA<br>MU</a></div>
             <div class="footer__side-a-logo-soc-soc">
-              <a href=""><img src="images\facebook-footer.svg" alt=""></a>
-              <a href=""><img src="images\instagram-footer.svg" alt=""></a>
+              <a
+                href="https://uk-ua.facebook.com/"
+                target="_blank"
+                rel="noopener"
+              >
+                <img src="images\facebook-footer.svg" alt="facebook">
+              </a>
+              <a
+                href="https://www.instagram.com/?hl=ru"
+                target="_blank"
+                rel="noopener"
+              >
+                <img src="images\instagram-footer.svg" alt="instagram">
+              </a>
             </div>
           </div>
           <div class="footer__side-a-schedule">
@@ -229,36 +265,36 @@
           <nav class="footer__side-b-nav">
             <ul class="footer__side-b-nav-list1">
               <li class="footer__side-b-nav-list1-item">
-                <a href="" class="footer__side-b-nav-list1-item-link">Галерея</a>
+                <a href="#gal" class="footer__side-b-nav-list1-item-link">Галерея</a>
               </li>
               <li class="footer__side-b-nav-list1-item">
-                <a href="" class="footer__side-b-nav-list1-item-link">Виставки та події</a>
+                <a href="#events" class="footer__side-b-nav-list1-item-link">Виставки та події</a>
               </li>
               <li class="footer__side-b-nav-list1-item">
-                <a href="" class="footer__side-b-nav-list1-item-link">Відвідування</a>
+                <a href="#sub" class="footer__side-b-nav-list1-item-link">Відвідування</a>
               </li>
               <li class="footer__side-b-nav-list1-item">
-                <a href="" class="footer__side-b-nav-list1-item-link">Стати нашим другом</a>
+                <a href="#sub" class="footer__side-b-nav-list1-item-link">Стати нашим другом</a>
               </li>
             </ul>
             <ul class="footer__side-b-nav-list2">
               <li class="footer__side-b-nav-list2-item">
-                <a href="" class="footer__side-b-nav-list2-item-link">Про Нас</a>
+                <a href="#header" class="footer__side-b-nav-list2-item-link">Про Нас</a>
               </li>
               <li class="footer__side-b-nav-list2-item">
-                <a href="" class="footer__side-b-nav-list2-item-link">Магазтн</a>
+                <a href="#sub" class="footer__side-b-nav-list2-item-link">Магазин</a>
               </li>
               <li class="footer__side-b-nav-list2-item">
-                <a href="" class="footer__side-b-nav-list2-item-link">Блог</a>
+                <a href="#sub" class="footer__side-b-nav-list2-item-link">Блог</a>
               </li>
               <li class="footer__side-b-nav-list2-item">
-                <a href="" class="footer__side-b-nav-list2-item-link">Контакти</a>
+                <a href="#sub" class="footer__side-b-nav-list2-item-link">Контакти</a>
               </li>
             </ul>
           </nav>
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
