Footer done for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,13 @@
 
           <div class="header__background"></div>
         </div>
-        <a href="#events" class="header__side-link side-link">
-          <div class="side-link__line"></div>
-          <div class="side-link__word">події</div>
-        </a>
+
+        <div class="header__side-link-wrapper">
+          <a href="#events" class="header__side-link side-link">
+            <div class="side-link__line"></div>
+            <div class="side-link__word">події</div>
+          </a>
+        </div>
       </div>
     </header>
 
@@ -93,11 +96,8 @@
         <div class="container events__contaier">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__content">
-            <div class="events__event event">
-              <img
-                src="/images/events-1.jpg"
-                alt=""
-                class="event__img">
+            <div class="events__event event event--1">
+              <div class="event__img"></div>
               <div class="event__info">
                 <div class="event__details">
                   <h5 class="event__type">Виставка</h5>
@@ -110,11 +110,8 @@
               </div>
             </div>
 
-            <div class="events__event event">
-              <img
-                src="/images/events-2.jpg"
-                alt=""
-                class="event__img">
+            <div class="events__event event event--2">
+              <div class="event__img"></div>
               <div class="event__info">
                 <div class="event__details">
                   <h5 class="event__type">ВИСТАВКА</h5>
@@ -279,88 +276,100 @@
           </div>
         </div>
 
-        <div class="footer__schedule">
-          <p class="footer__schedule-title footer__title">Графік роботи</p>
-          <p class="footer__schedule-description">
-            <strong>12:00 — 20:00 </strong>
-            середа
-            <br>
-            <strong>12:00 — 20:00 </strong>
-            четвер
-            <br>
-            <strong>12:00 — 20:00 </strong>
-            п’ятниця
-            <br>
-            <strong>11:00 — 19:00 </strong>
-            субота
-            <br>
-            <strong>11:00 — 19:00 </strong>
-            неділя
-          </p>
-          <p class="footer__schedule-detailed-description">
-            <strong>Вихідні:</strong> понеділок, вівторок
-            <br>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </p>
+        <div class="footer__time-and-contacts">
+
+          <div class="footer__schedule">
+            <p class="footer__schedule-title footer__title">Графік роботи</p>
+            <p class="footer__schedule-description">
+              <strong>12:00 — 20:00 </strong>
+              середа
+              <br>
+              <strong>12:00 — 20:00 </strong>
+              четвер
+              <br>
+              <strong>12:00 — 20:00 </strong>
+              п’ятниця
+              <br>
+              <strong>11:00 — 19:00 </strong>
+              субота
+              <br>
+              <strong>11:00 — 19:00 </strong>
+              неділя
+            </p>
+            <p class="footer__schedule-detailed-description">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="footer__title footer__contacts-title">Контакти:</p>
+            <p class="footer__contacts-description">вул. М. Грушевського, 6;
+              <br>
+              Київ, 01001
+              <br>
+              тел.
+              <a
+                href="tel:380442781357"
+                class="footer__contacts-link footer__phone">
+              +38 (044) 278-13-57
+              </a>
+              <br>
+              факс
+              <a
+                href="fax:380442781357"
+                class="footer__contacts-link footer__fax">
+              +38 (044) 278-13-57
+              </a>
+              <br>
+              e-mail:
+              <a
+                class="footer__contacts-link footer__email"
+                href="emailto:info@namu.kiev.ua">
+              info@namu.kiev.ua
+              </a>
+            </p>
+          </div>
         </div>
-        <div class="footer__contacts">
-          <p class="footer__title footer__contacts-title">Контакти:</p>
-          <p class="footer__contacts-description">вул. М. Грушевського, 6;
-            <br>
-            Київ, 01001
-            <br>
-            тел.
-            <a
-              href="tel:380442781357"
-              class="footer__contacts-link footer__phone">
-            +38 (044) 278-13-57
-            </a>
-            <br>
-            факс
-            <a
-              href="fax:380442781357"
-              class="footer__contacts-link footer__fax">
-            +38 (044) 278-13-57
-            </a>
-            <br>
-            e-mail:
-            <a
-              class="footer__contacts-link footer__email"
-              href="emailto:info@namu.kiev.ua">
-            info@namu.kiev.ua
-            </a>
-          </p>
-        </div>
+
+
 
         <nav class="footer__nav">
           <ul class="footer__list">
-            <li class="footer__list-tem">
-              <a href="#gallery" class="footer__nav-link">Галерея</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#events" class="footer__nav-link">Виставки та події</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#visit" class="footer__nav-link">Відвідування</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#subscribe" class="footer__nav-link">Стати нашим другом</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#" class="footer__nav-link">Про Нас</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#shop" class="footer__nav-link">Магазин</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#blog" class="footer__nav-link">Блог</a>
-            </li>
-            <li class="footer__list-tem">
-              <a href="#contacts" class="footer__nav-link">Контакти</a>
-            </li>
+            <div class="footer__list-left">
+              <li class="footer__list-tem">
+                <a href="#gallery" class="footer__nav-link">Галерея</a>
+              </li>
+              <li class="footer__list-tem">
+                <a href="#events" class="footer__nav-link">Виставки та події</a>
+              </li>
+              <li class="footer__list-tem">
+                <a href="#visit" class="footer__nav-link">Відвідування</a>
+              </li>
+              <li class="footer__list-tem">
+                <a href="#subscribe" class="footer__nav-link">Стати нашим другом</a>
+              </li>
+            </div>
+
+            <div class="footer__list-right">
+              <li class="footer__list-tem">
+                <a href="#" class="footer__nav-link">Про Нас</a>
+              </li>
+              <li class="footer__list-tem">
+                <a href="#shop" class="footer__nav-link">Магазин</a>
+              </li>
+              <li class="footer__list-tem">
+                <a href="#blog" class="footer__nav-link">Блог</a>
+              </li>
+              <li class="footer__list-tem">
+                <a href="#contacts" class="footer__nav-link">Контакти</a>
+              </li>
+            </div>
           </ul>
         </nav>
+
       </div>
       <div class="footer__bottom">
         <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
