add lection block

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header"></header>
 
-    <main>
+    <main class="main">
       <section class="events">
         <div class="events__container container">
           <div class="events__title title">
@@ -20,16 +20,16 @@
           </div>
           <article class="events__exhibition exhibition">
             <img
-              class="exhibition__image"
+              class="events__image"
               src="images/events-1.png"
               alt="volley near the sea"
             >
-            <div class="exhibition__content">
+            <div class="events__content">
               <div class="exhibition__heading">
                 <div class="exhibition__type">ВИСТАВКА</div>
                 <div class="exhibition__date">26.08-29.11.2019</div>
               </div>
-              <div class="exhibition__name">Йду і повертаюсь
+              <div class="exhibition__name events__name">Йду і повертаюсь
               </div>
               <div class="exhibition__description">
                 Національний Художній Музей України презентує унікальну частину
@@ -41,16 +41,16 @@
 
           <article class="events__exhibition exhibition">
             <img
-              class="exhibition__image"
+              class="events__image"
               src="images/events-2.png"
               alt="ukrainian girl"
             >
-            <div class="exhibition__content">
+            <div class="events__content">
               <div class="exhibition__heading">
                 <div class="exhibition__type">ВИСТАВКА</div>
                 <div class="exhibition__date">26.08-29.11.2019</div>
               </div>
-              <div class="exhibition__name">І спогади і мрії
+              <div class="exhibition__name events__name">І спогади і мрії
               </div>
               <div class="exhibition__description">
                 Національний художній музей України до 100 річчя від дня
@@ -60,6 +60,17 @@
               </div>
             </div>
           </article>
+        </div>
+      </section>
+
+      <section class="lection">
+        <div class="lection__image"></div>
+        <div class="lection__content">
+          <div class="exhibition__heading lection__heading">
+            <div class="exhibition__type">ЛЕКЦІЯ</div>
+            <div class="exhibition__date lection__date">26/08/2019 - 11:00</div>
+          </div>
+          <div class="exhibition__name">Від класицизму до романтизму</div>
         </div>
       </section>
     </main>
