--- a/src/index.html
+++ b/src/index.html
@@ -120,27 +120,27 @@
 
     <section class="section">
       <h1 class="section__title">Актуальні події</h1>
-      <div class="gallery">
+      <div class="event">
 
-        <article class="gallery__position">
-          <div class="gallery__photos">
+        <article class="event__position">
+          <div class="event__photos">
             <img
-              class="gallery__photo"
+              class="event__photo"
               src="images/gallery/up.png"
-              alt="gallery photo"
+              alt="event photo"
             >
           </div>
-          <div class="gallery__description">
-            <p class="gallery__exhibition">
+          <div class="event__description">
+            <p class="event__exhibition">
               ВИСТАВКА
-              <a href="#" class="gallery__link">
+              <a href="#" class="event__link">
                 26.08-29.11.2019
               </a>
             </p>
-            <h2 class="gallery__name">
+            <h2 class="event__name">
               Йду і повертаюсь
             </h2>
-            <p class="gallery__text">
+            <p class="event__text">
               Національний Художній Музей України
               презентує унікальну частину колекції
               Градобанку - українське мистецтво другої
@@ -151,18 +151,18 @@
           </div>
         </article>
 
-        <article class="gallery__position gallery__position--end">
-          <div class="gallery__description">
-            <p class="gallery__exhibition">
+        <article class="event__position event__position--end">
+          <div class="event__description">
+            <p class="event__exhibition">
               ВИСТАВКА
-              <a href="#" class="gallery__link">
+              <a href="#" class="event__link">
                 26.08-29.11.2019
               </a>
             </p>
-            <h2 class="gallery__name">
+            <h2 class="event__name">
               І спогади і мрії
             </h2>
-            <p class="gallery__text">
+            <p class="event__text">
               Національний художній музей України
               до 100 річчя від дня народження
               видатної української художниці
@@ -170,11 +170,11 @@
               ювілейну виставку «І спогади і мрії».
             </p>
           </div>
-          <div class="gallery__photos gallery__photos--second">
+          <div class="event__photos event__photos--second">
             <img
-              class="gallery__photo"
+              class="event__photo"
               src="images/gallery/down.png"
-              alt="gallery photo"
+              alt="event photo"
             >
           </div>
         </article>
@@ -192,17 +192,214 @@
         >
       </div>
       <div class="fon__title">
-        <p class="gallery__exhibition gallery__exhibition--fon">
+        <p class="event__exhibition event__exhibition--fon">
           ЛЕКЦІЯ
-          <a href="#" class="gallery__link gallery__link--fon">
+          <a href="#" class="event__link event__link--fon">
             26/08/2019 - 11:00
           </a>
         </p>
-        <h2 class="gallery__name gallery__name--fon">
+        <h2 class="event__name event__name--fon">
           Від класицизму до романтизму
         </h2>
       </div>
     </section>
 
+    <section class="section">
+      <h1 class="section__title">Галерея</h1>
+      <div class="gallery">
+        <img
+          src="../src/images/Photo/1.png"
+          class="gallery__photo gallery__photo--first"
+          alt="photo"
+        >
+        <img
+          src="../src/images/Photo/2.png"
+          class="gallery__photo gallery__photo--second"
+          alt="photo"
+        >
+        <img
+          src="../src/images/Photo/3.png"
+          class="gallery__photo gallery__photo--third"
+          alt="photo"
+        >
+        <img
+          src="../src/images/Photo/4.png"
+          class="gallery__photo gallery__photo--fourth"
+          alt="photo"
+        >
+        <img
+          src="../src/images/Photo/5.png"
+          class="gallery__photo gallery__photo--fifth"
+          alt="photo"
+        >
+        <img
+          src="../src/images/Photo/6.png"
+          class="gallery__photo gallery__photo--sixth"
+          alt="photo"
+        >
+        <button class="gallery__button">></button>
+      </div>
+    </section>
+
+    <section class="subscription">
+
+      <div class="subscription__photos">
+        <img
+          class="subscription__photo"
+          src="images/підписка.png"
+          alt="fon photo"
+        >
+      </div>
+
+      <div class="subscription__container">
+        <h2 class="subscription__title">
+          Підписка
+        </h2>
+        <p class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="subscription__position">
+          <input
+            class="subscription__input"
+            type="email"
+            placeholder="E-mail"
+            id="email"
+            required
+          >
+          <button class="subscription__button"></button>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer section">
+
+      <div class="footer__content">
+
+        <div class="footer__content-left">
+          <div class="footer__media">
+            <h2 class="footer__logo">
+              NA
+              <br>
+              MU
+            </h2>
+            <div>
+              <a href="#" class="footer__link footer__link--media">
+                <img
+                  src="images/Icon/facebook.svg"
+                  alt="Icon facebook"
+                >
+              </a>
+              <a href="#" class="footer__link footer__link--media">
+                <img
+                  src="images/Icon/instagram.svg"
+                  alt="icon instagram"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__position">
+            <div class="footer__schedule">
+              <p class="footer__text">
+                Графік роботи
+              </p>
+              <br>
+              <p class="footer__text footer__text--container">
+                <span class="footer__text--bolt">12:00 — 20:00</span> середа
+                <br>
+                <span class="footer__text--bolt">12:00 — 20:00</span> четвер
+                <br>
+                <span class="footer__text--bolt">12:00 — 20:00</span> п’ятниця
+                <br>
+                <span class="footer__text--bolt">11:00 — 19:00</span> субота
+                <br>
+                <span class="footer__text--bolt">11:00 — 19:00</span> неділя
+                <br>
+                <br>
+                Вихідні понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </p>
+            </div>
+
+            <div class="footer__contact">
+              <p class="footer__text">
+                Контакти:
+              </p>
+              <br>
+              <p class="footer__text footer__text--addres">
+                <a href="#" class="footer__link footer__link--address">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <br>
+                <a href="#" class="footer__link footer__link--address">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a href="#" class="footer__link footer__link--address">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a href="#" class="footer__link footer__link--address">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="footer__content-right">
+
+          <nav class="footer__nav">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Галерея
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Про нас
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Магазин
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Відвідування
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Блог
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Стати нашим другом
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__link--menu">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+        </div>
+
+      </div>
+
+    </footer>
   </body>
 </html>
