--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/Icon/NA MU.svg">
   </head>
   <body>
     <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
-
     <header class="header">
       <div class="header__content">
         <div class="header__position">
@@ -401,5 +401,7 @@
       </div>
 
     </footer>
+
   </body>
+
 </html>
