--- a/src/index.html
+++ b/src/index.html
@@ -50,37 +50,45 @@
             </div>
             <div class="header__image-text">Дівчина з Поділля <br>В. Тропінін</div>
           </div>
-          <div class="header__visit">
-            <div class="header__about about">
-              <div class="about__item">
-                <div class="about__title">
-                  <span>Розклад сьогодні:</span>
-                </div>
-                <div class="about__text">
-                  <span>12:00 - 19:00</span>
-                </div>
-              </div>
-              <div class="about__item">
-                <div class="about__title">
-                  <span>Адреса:</span>
-                </div>
-                <div class="about__text">
-                  <span>Київ, вул. М. Грушевського, 6</span>
-                </div>
-              </div>
-            </div>
-            <div class="header__visit-options">
-              <ul>
-                <li><a href="#">Спланувати візит</a></li>
-                <li><a href="#">Виставки та події</a></li>
-                <li><a href="#">Колекція</a></li>
-              </ul>
-            </div>
-            <a href="" class="button header__button">Купити квиток</a>
-            <a href="" class="button header__button">Стати членом</a>
-
-          </div>
         </div>
+<!--        <div class="container">-->
+<!--          <div class="header__visit ">-->
+
+<!--            <div class="header__visit-content">-->
+<!--              <div class="header__visit-about about">-->
+<!--                <div class="about__item">-->
+<!--                  <p class="about__title">-->
+<!--                    Розклад сьогодні:-->
+<!--                  </p>-->
+<!--                  <p class="about__text">-->
+<!--                    12:00 - 19:00-->
+<!--                  </p>-->
+<!--                </div>-->
+<!--                <div class="about__item">-->
+<!--                  <div class="about__title">-->
+<!--                    <span>Адреса:</span>-->
+<!--                  </div>-->
+<!--                  <div class="about__text">-->
+<!--                    <span>Київ, вул. М. Грушевського, 6</span>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--              <div class="header__visit-options">-->
+<!--                <ul>-->
+<!--                  <li><a href="#">Спланувати візит</a></li>-->
+<!--                  <li><a href="#">Виставки та події</a></li>-->
+<!--                  <li><a href="#">Колекція</a></li>-->
+<!--                </ul>-->
+<!--              </div>-->
+<!--              <a href="" class="button header__button">Купити квиток</a>-->
+<!--              <a href="" class="button header__button">Стати членом</a>-->
+<!--            </div>-->
+<!--            <img-->
+<!--              src="images/header-pic2.png"-->
+<!--              alt="visit"-->
+<!--              class="header__visit-image">-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
       <main>
         <section class="exhibitions">
@@ -216,6 +224,27 @@
           </div>
           <div class="section-bottom">
             <a href="#" class="section-bottom-link">Усі новини</a>
+          </div>
+        </section>
+        <section class="digest">
+          <div class="container">
+            <h2 class="digest__title">Підпишіться на дайджест</h2>
+            <div class="digest__content">
+              <p class="digest__text">
+                Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів
+              </p>
+              <form
+                class="digest__form"
+                action="#"
+                method="get"
+                id="form">
+                <label for="email">
+                  <input class="digest__input" type="email" id="email" placeholder="e-mail" name="email" required="">
+                </label>
+                <button class="digest__button" type="submit"></button>
+              </form>
+            </div>
+
           </div>
         </section>
       </main>
