--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
 
         <ul class="nav__list">
           <li class="nav__item">
+            <h2 class="nav__logo">na<br>mu</h2>
+          </li>
+
+          <li class="nav__item">
             <a class="nav__link" href="#">Галерея</a>
           </li>
 
@@ -59,6 +63,12 @@
           <li class="nav__item">
             <a href="" class="nav__link">Контакти</a>
           </li>
+
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              <img src="images/search.svg" alt="search">
+            </a>
+          </li>
         </ul>
 
         <a class="nav__search" href="#">
@@ -66,27 +76,31 @@
         </a>
       </nav>
 
-      <h1 class="header__article">
-        худож<span class="header__article-span">ній</span>
-        <br> музей
-      </h1>
+      <div class="header__text">
+        <h1 class="header__article">
+          худож<span class="header__article-span">ній</span>
+          <br> музей
+        </h1>
 
-      <a class="header__tickets" href="#">
-        <div class="header__tickets-text">квитки</div>
-        <div class="header__tickets-area">
-          <img
-            class="header__tickets-img"
-            src="images/header__tickets-img.svg"
-            alt="buy tickets"
-          >
-        </div>
-      </a>
+        <a class="header__tickets" href="#">
+          <div class="header__tickets-text">квитки</div>
+          <div class="header__tickets-area">
+            <img
+              class="header__tickets-img"
+              src="images/header__tickets-img.svg"
+              alt="buy tickets"
+            >
+          </div>
+        </a>
+      </div>
 
-      <img
+      <!-- <img
         class="header__mainImg"
         src="images/headerImg.png"
         alt="photo of museum"
-      >
+      > -->
+
+      <div class="header__bcgImg"></div>
 
       <div class="header__sideImg">
         <div class="header__sideImg-line"></div>
@@ -160,6 +174,47 @@
             Від класицизму до романтизму
           </h4>
         </div>
+      </div>
+
+      <div class="gallery main__gallery">
+        <h3 class="gallery__article">Галерея</h3>
+
+        <img
+          class="gallery__firstImg"
+          src="images/galleryFirst.png"
+          alt="#"
+        >
+
+        <img
+          class="gallery__secondImg"
+          src="images/gallerySecond.png"
+          alt="#"
+        >
+
+        <img
+          class="gallery__thirdImg"
+          src="images/galleryThird.png"
+          alt="#"
+        >
+
+        <img
+          class="gallery__fourthImg"
+          src="images/galleryFourth.png"
+          alt="#"
+        >
+
+        <img
+          class="gallery__fifthImg"
+          src="images/galleryFifth.png"
+          alt="#"
+        >
+
+        <img
+          class="gallery__sixthImg"
+          src="images/gallerySixth.png"
+          alt="#"
+        >
+
       </div>
     </main>
   </body>
