--- a/src/index.html
+++ b/src/index.html
@@ -25,40 +25,18 @@
         </a>
       </h2>
 
-      <input
-        type="checkbox"
-        class="switch__checkbox"
-        id="check"
-      >
-      <nav class="header__nav nav">
-        <ul class="header__nav-list nav__list">
-          <li class="header__nav-item"><a href="" class="header__nav-link">Галерея</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Виставки та події</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Відвідування</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Стати нашим другом</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Про нас</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Магазин</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Блог</a></li>
-          <li class="header__nav-item"><a href="" class="header__nav-link">Контакти</a></li>
+      <nav class="header__menu menu">
+        <ul class="header__menu-list menu__list">
+          <li class="header__menu-item"><a href="" class="header__menu-link">Галерея</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Виставки та події</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Відвідування</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Стати нашим другом</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Про нас</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Магазин</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Блог</a></li>
+          <li class="header__menu-item"><a href="" class="header__menu-link">Контакти</a></li>
         </ul>
       </nav>
-
-      <label class="header__switch switch" for="check">
-        <svg
-          class="switch__button"
-          width="18"
-          height="12"
-          viewBox="0 0 18 12"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
-            fill="#0F0E08"
-          >
-          </path>
-        </svg>
-      </label>
 
       <h1 class="header__page-name">
         ХУДОЖ<span class="header__page-name--transparent">НІЙ</span>
@@ -91,6 +69,12 @@
           </svg>
         </button>
       </form>
+
+      <span
+        class="toggler header__toggler"
+        onclick="toggleSidebar()"
+      >
+      </span>
     </header>
     <main class="main">
       <section class="announcements">
