gallary with slider

--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,81 @@
 
       </section>
 
+      <div class="container">
+        <section class="gallary">
+          <h2 class="gallary__title">Галерея</h2>
+
+          <div class="gallery__slider slider">
+
+            <input
+              type="radio"
+              class="slider__input slider__input--1"
+              id="1"
+              name="slider"
+              checked
+            >
+            <label for="1" class="slider__label"></label>
+
+            <input
+              type="radio"
+              class="slider__input slider__input--2"
+              id="2"
+              name="slider"
+            >
+            <label for="2" class="slider__label"></label>
+
+            <input
+              type="radio"
+              class="slider__input slider__input--3"
+              id="3"
+              name="slider"
+            >
+            <label for="3" class="slider__label"></label>
+
+            <input
+              type="radio"
+              class="slider__input slider__input--4"
+              id="4"
+              name="slider"
+            >
+            <label for="4" class="slider__label"></label>
+
+            <div class="gallary__wrapper">
+              <img
+                src="./images/gallary-1.png"
+                alt="arts"
+                class="gallary__picture gallary__picture--1"
+                >
+              <img
+                src="./images/gallary-2.png"
+                alt="arts"
+                class="gallary__picture gallary__picture--2"
+                >
+              <img
+                src="./images/gallary-3.png"
+                alt="arts"
+                class="gallary__picture gallary__picture--3"
+                >
+              <img
+                src="./images/gallary-4.png"
+                alt="arts"
+                class="gallary__picture gallary__picture--4"
+                >
+              <img
+                src="./images/gallary-5.png"
+                alt="arts"
+                class="gallary__picture gallary__picture--5"
+                >
+              <img
+                src="./images/gallary-6.png"
+                alt="arts"
+                class="gallary__picture gallary__picture--6"
+                >
+            </div>
+          </div>
+
+        </section>
+      </div>
 
     </main>
 
