smooth scroll was added

--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,14 @@
 
       <nav class="header__menu menu">
         <ul class="header__menu-list menu__list">
-          <li class="header__menu-item"><a href="" class="header__menu-link">Галерея</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Виставки та події</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Відвідування</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Стати нашим другом</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Про нас</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Магазин</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Блог</a></li>
-          <li class="header__menu-item"><a href="" class="header__menu-link">Контакти</a></li>
+          <li class="header__menu-item"><a href="#galery" class="header__menu-link">Галерея</a></li>
+          <li class="header__menu-item"><a href="#annonucements" class="header__menu-link">Виставки та події</a></li>
+          <li class="header__menu-item"><a href="#timetable" class="header__menu-link">Відвідування</a></li>
+          <li class="header__menu-item"><a href="#subscription" class="header__menu-link">Стати нашим другом</a></li>
+          <li class="header__menu-item"><a href="#" class="header__menu-link">Про нас</a></li>
+          <li class="header__menu-item"><a href="#" class="header__menu-link">Магазин</a></li>
+          <li class="header__menu-item"><a href="#" class="header__menu-link">Блог</a></li>
+          <li class="header__menu-item"><a href="#contacts" class="header__menu-link">Контакти</a></li>
         </ul>
       </nav>
 
@@ -77,7 +77,7 @@
       </span>
     </header>
     <main class="main">
-      <section class="announcements">
+      <section class="announcements" id="annonucements">
         <h2 class="announcements__header">Актуальні події</h2>
 
         <div class="annonucements__exhibition exhibition exhibition--go-and-come-back">
@@ -149,7 +149,7 @@
         </div>
       </section>
 
-      <section class="galery">
+      <section class="galery" id="galery">
         <h2 class="galery__header">Галерея</h2>
 
         <div class="galery__images">
@@ -240,7 +240,7 @@
 
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <h2 class="subscription__header">
           Підписка
         </h2>
@@ -321,7 +321,7 @@
         </div>
       </div>
 
-      <div class="footer__timetable">
+      <div class="footer__timetable" id="timetable">
         <h3 class="footer__section-header">Графік роботи</h3>
 
         <ul class="footer__timetable-list">
@@ -334,7 +334,7 @@
         </ul>
       </div>
 
-      <div class="footer__contacts">
+      <div class="footer__contacts" id="contacts">
         <h3 class="footer__section-header">Контакти:</h3>
         <p class="footer__text">
           вул. М. Грушевського, 6; Київ, 01001<br>
@@ -346,14 +346,14 @@
 
       <nav class="footer__nav nav">
         <ul class="footer__nav-list nav__list">
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Галерея</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Виставки та події</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Відвідування</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Стати нашим другом</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Про нас</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Магазин</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Блог</a></li>
-          <li class="footer__nav-item"><a href="" class="footer__nav-link">Контакти</a></li>
+          <li class="footer__nav-item"><a href="#galery" class="footer__nav-link">Галерея</a></li>
+          <li class="footer__nav-item"><a href="#annonucements" class="footer__nav-link">Виставки та події</a></li>
+          <li class="footer__nav-item"><a href="#timetable" class="footer__nav-link">Відвідування</a></li>
+          <li class="footer__nav-item"><a href="#subscription" class="footer__nav-link">Стати нашим другом</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__nav-link">Про нас</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__nav-link">Магазин</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__nav-link">Блог</a></li>
+          <li class="footer__nav-item"><a href="#contacts" class="footer__nav-link">Контакти</a></li>
         </ul>
       </nav>
     </footer>
