--- a/src/index.html
+++ b/src/index.html
@@ -11,51 +11,60 @@
   </head>
   <body>
     <header class="header">
-      <div class="left">
+      <div class="burger">
+        <input
+          type="checkbox"
+          id="check-menu"
+          class="check-input"
+        >
+        <label for="check-menu" class="check-label"></label>
+        <div class="burger-line first"></div>
+        <div class="burger-line second"></div>
+        <div class="burger-line third"></div>
+        <div class="burger-line fourth"></div>
+
         <nav class="nav header__nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#Gallery" class="nav__link">
                 Галерея
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#current-events" class="nav__link">
                 Виставки та події
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#insert" class="nav__link">
                 Відвідування
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#subscription" class="nav__link">
                 Стати нашим другом
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#schedule" class="nav__link">
                 Про Нас
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#schedule" class="nav__link">
                 Магазин
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                Магазин
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#contacts" class="nav__link">
                 Контакти
               </a>
             </li>
           </ul>
         </nav>
+      </div>
+      <div class="left">
+
         <div class="left__text">
           <p class="left__text__paragraph">
             ПОДІЇ
@@ -108,7 +117,7 @@
     <main>
       <div class="container">
         <section class="section">
-          <div class="current-events">
+          <div class="current-events" id="current-events">
             <h2 class="title__events title">Актуальні події</h2>
             <div class="return">
               <div class="return__img">
@@ -169,7 +178,7 @@
       </div>
 
       <section class="section">
-        <div class="insert">
+        <div class="insert" id="insert">
           <div class="insert__transition">
             <div class="line line__insert"></div>
             <img
@@ -193,7 +202,7 @@
 
       <div class="container">
         <section class="section">
-          <div class="gallery">
+          <div class="gallery" id="Gallery">
             <h2 class="title__events title gallery__title">Галерея</h2>
             <div class="gallery__picture">
               <div class="gallery__picture__important">
@@ -237,7 +246,7 @@
       </div>
 
       <section class="section">
-        <div class="subscription">
+        <div class="subscription" id="subscription">
           <div class="line line__subscription"></div>
           <img
             src="images/footer.png"
@@ -299,7 +308,7 @@
 
           <div class="footer-info">
 
-            <div class="schedule">
+            <div class="schedule" id="schedule">
               <h3 class="schedule__work">
                 Графік роботи
               </h3>
@@ -316,20 +325,23 @@
               </p>
             </div>
 
-            <div class="contacts">
+            <div class="contacts" id="contacts">
               <h3 class="contacts__title">
                 Контакти:
               </h3>
 
-              <a href="" class="contacts__address">
+              <a
+                href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5285706,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593"
+                class="contacts__address contacts__address-1"
+              >
                 вул. М. Грушевського, 6; Київ, 01001<br>
               </a>
 
-              <a href="" class="contacts__address">
+              <a href="tel:+38 (044) 278-13-57" class="contacts__address contacts__address-2">
                 тел. +38 (044) 278-13-57<br> факс +38 (044) 278-74-54<br>
               </a>
 
-              <a href="" class="contacts__address">
+              <a href="mailto:info@namu.kiev.ua" class="contacts__address contacts__address-3">
                 e-mail: info@namu.kiev.ua
               </a>
             </div>
@@ -342,22 +354,22 @@
             <nav class="footer__nav">
               <ul class="nav__list-footer">
                 <li class="nav__item-footer">
-                  <a href="" class="nav__link-footer">
+                  <a href="#Gallery" class="nav__link-footer">
                     Галерея
                   </a>
                 </li>
                 <li class="nav__item-footer">
-                  <a href="" class="nav__link-footer">
+                  <a href="#current-events" class="nav__link-footer">
                     Виставки&nbspта&nbspподії
                   </a>
                 </li>
                 <li class="nav__item-footer">
-                  <a href="" class="nav__link-footer">
+                  <a href="#insert" class="nav__link-footer">
                     Відвідування
                   </a>
                 </li>
                 <li class="nav__item-footer">
-                  <a href="" class="nav__link-footer">
+                  <a href="#subscription" class="nav__link-footer">
                     Стати&nbspнашим&nbspдругом
                   </a>
                 </li>
@@ -367,22 +379,22 @@
             <nav class="footer__nav-about">
               <ul class="nav__contacts">
                 <li class="nav__item-footer nav__item-footer--second">
-                  <a href="" class="nav__link-footer">
+                  <a href="#schedule" class="nav__link-footer">
                     Про&nbspНас
                   </a>
                 </li>
                 <li class="nav__item-footer nav__item-footer--second">
-                  <a href="" class="nav__link-footer">
+                  <a href="#schedule" class="nav__link-footer">
                     Магазин
                   </a>
                 </li>
                 <li class="nav__item-footer nav__item-footer--second">
-                  <a href="" class="nav__link-footer">
+                  <a href="#subscription" class="nav__link-footer">
                     Блог
                   </a>
                 </li>
                 <li class="nav__item-footer nav__item-footer--second">
-                  <a href="" class="nav__link-footer">
+                  <a href="#contacts" class="nav__link-footer">
                     Контакти
                   </a>
                 </li>
